--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 		<div class="side-menu" id="side-menu">
 			<div class="close" onclick="sideMenu(1)"><img src="images/icon/close.png" alt=""></div>
 			<div class="user">
-				<img src="images/creator/roshan.jpeg" alt="Username">
-				<p>roshank9419</p>
+				<img src="images/icon/logo.jpg" alt="Username">
+			
 			</div>
 			<ul>
 				<li><a href="#about_section">About</a></li>
